--- a/v0/index.html
+++ b/v0/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/v0.loader.js";
       var config = {
-        dataUrl: buildUrl + "/v0.data.gz",
-        frameworkUrl: buildUrl + "/v0.framework.js.gz",
-        codeUrl: buildUrl + "/v0.wasm.gz",
+        dataUrl: buildUrl + "/v0.data",
+        frameworkUrl: buildUrl + "/v0.framework.js",
+        codeUrl: buildUrl + "/v0.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TreasureHoard",
